# Track-5Sem2025ETL

./: .gitignore  Mais1Teste.txt  README.md  TesteValidação.txt  William  William.txt  prefect.yaml  pyproject.toml  requirements.txt  setup.cfg  sonar-project.properties  sonar-project.properties.local  sonar-project.properties.old
.github/workflows/: main.yml  merge.yml  pyci.yml
ETL-Taiga/: .gitignore
ETL-Taiga/db/: Connection.py
ETL-Taiga/models/: FatoCard.py
ETL-Taiga/src/: Main.py
db/: Connection.py
etl_taiga/: config.py  main.py  sonar-project.properties.old
etl_taiga/coverage/: __init___py.html  class_index.html  config_py.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_main_py.html  z_1f4cdc73c39a6604_Connection_py.html  z_1f4cdc73c39a6604___init___py.html  z_33ea1954bbe60e2e___init___py.html  z_33ea1954bbe60e2e_auth_py.html  z_33ea1954bbe60e2e_get_data_py.html  z_33ea1954bbe60e2e_methods_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_basic_py.html  z_e634d7a1dd90e049_Date_py.html  z_e634d7a1dd90e049_DimCard_py.html  z_e634d7a1dd90e049_DimProject_py.html  z_e634d7a1dd90e049_DimRole_py.html  z_e634d7a1dd90e049_DimStatus_py.html  z_e634d7a1dd90e049_DimTag_py.html  z_e634d7a1dd90e049_DimTime_py.html  z_e634d7a1dd90e049_DimUser_py.html  z_e634d7a1dd90e049_FatoCard_py.html  z_e634d7a1dd90e049___init___py.html
etl_taiga/db/: Connection.py  base.py  engine.py
etl_taiga/models/: Date.py  DimCard.py  DimDay.py  DimHour.py  DimMinute.py  (+11 more)
models/: FatoCard.py  __init__.py
(+23 files in other folders)
