[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "etl_taiga"
version = "0.1.0"
description = "ETL pipeline para integração com Taiga"
requires-python = ">=3.8"
dependencies = [
    "prefect>=2.0",
    "psycopg2-binary",
    "requests",
    "python-dotenv",
]

[tool.setuptools]
packages = ["etl_taiga", "etl_taiga.db","etl_taiga.src.services","etl_taiga.src.services","etl_taiga.models"]